syntax = "proto3";
option go_package = "github.com/alvidir/tp-auth/proto/dashboard";

package dashboard;

// RegisterAppRequest description
message RegisterAppRequest {
  string cookie = 1; // username identifier
  string name = 2;   // a unique name for the application
  string url = 3;    // the application's home URL
  string descr = 4;  // a description about the application
}

// DeleteAppRequest description
message DeleteAppRequest {
  string cookie = 1; // username identifier
  string name = 2;   // a unique name for the application
}